--- a/src/app/components/admin/alta/alta.component.css
+++ b/src/app/components/admin/alta/alta.component.css
@@ -1,3 +1,27 @@
 .form-control.login-user {
-    border: 0px solid #fff !important;
-  }
+  border: 0 solid #fff !important;
+}
+
+.btn-social {
+  position:relative;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #fff;
+  border-color: rgba(0,0,0,0.2);
+
+}
+
+.btn-facebook {
+  background:#3b5998;
+
+}
+
+.btn-google {
+  background: #dd4b39;
+}
+
+#login:active {
+transform:rotateX('180');
+}
