--- a/src/app/components/admin/alta/alta.component.html
+++ b/src/app/components/admin/alta/alta.component.html
@@ -1,73 +1,79 @@
+<br>
 <section id="register" class="mb-5 mt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
-          <div class="card_register">
-            <div class="card">
-              <div class="card-body text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
+        <div class="card_register">
+          <div class="card">
+            <div class="card-body text-center">
 
-                <form #formRegister="ngForm" (ngSubmit)="onAddUser()">
+              <!-- #region Formulario -->
+              <form #formRegister="ngForm" (ngSubmit)="crear()">
 
-                  <h1 class="h3 mb-3 font-weight-normal">Alta</h1>
+                <h1 class="h3 mb-3 font-weight-normal">Alta</h1>
 
-                  <!-- #region Mensaje de error -->
-                  <div class="alert alert-danger" role="alert" *ngIf="isError">
-                    {{msgError}}
-                  </div>
-                  <!-- #endregion -->
+                <!-- #region Mensaje de error -->
+                <div class="alert alert-danger" role="alert" *ngIf="isError">
+                  {{msgError}}
+                </div>
+                <!-- #endregion -->
 
-                  <!-- #region Email -->
-                  <div class="form-group">
-                    <input type="email" id="email"  name="email" class="form-control" placeholder="Email" required minlength="8"
-                    [(ngModel)]="this.email" #prueba="ngModel">
-                  </div>
+                <!-- #region Email -->
 
-                  <div class="alert alert-danger" role="alert" *ngIf="email.touched && !email.valid">
-                      <div *ngIf="email?.errors.required">Email is required</div>
-                      <div *ngIf="email?.errors.minlength">Email must be at least 8 characters</div>
-                    </div>
-                    <!-- #endregion -->
+                <div class="form-group">
+                  <input type="email" id="email" name="email" class="form-control" placeholder="Email" required
+                    minlength="8" [(ngModel)]="this.email" #Email="ngModel">
+                </div>
 
+                <div class="alert alert-danger" role="alert" *ngIf="Email.touched && !Email.valid">
+                  <div *ngIf="Email?.errors.required">Ingrese un mail</div>
+                  <div *ngIf="Email?.errors.minlength">La direccion debe tener al menos 8 caracteres</div>
+                </div>
 
-                    <!-- #region Contraseña -->
-                    <div class="form-group">
-                      <input type="password" name="password" class="form-control" placeholder="Password"
-                        [(ngModel)]="this.password" required minlength="5" maxlength="10" #password="ngModel">
-                    </div>
-                    <div class="alert alert-danger" role="alert" *ngIf="password.touched && !password.valid">
-                      <div *ngIf="password?.errors.required">Password is required</div>
-                      <div *ngIf="password?.errors.minlength">Password must be at least 5 characters</div>
-                    </div>
-                    <!-- #endregion -->
+                <!-- #endregion -->
 
-                    <div class="form-group">
-                        <label for="TipoUsuario">Tipo de usuario</label>
-                        <select name="TipoUsuario" class="form-control">
-                          <option value="administrador">Administrador</option>
-                          <option value="estandar">Estandar</option>
-                        </select>
-                      </div>
+                <!-- #region Contraseña -->
+                <div class="form-group">
+                  <input type="password" name="password" class="form-control" placeholder="Password"
+                    [(ngModel)]="this.password" required minlength="5" maxlength="10" #Password="ngModel">
+                </div>
+                <div class="alert alert-danger" role="alert" *ngIf="Password.touched && !Password.valid">
+                  <div *ngIf="Password?.errors.required">Ingrese una password</div>
+                  <div *ngIf="Password?.errors.minlength">La password debe tener al menos 5 caracteres</div>
+                </div>
+                <!-- #endregion -->
 
+                <!-- #region Tipo de usuario -->
+                <div class="form-group">
+                  <label for="TipoUsuario">Tipo de usuario</label>
+                  <select name="TipoUsuario" class="form-control">
+                    <option value="administrador">Administrador</option>
+                    <option value="cliente">Cliente</option>
+                  </select>
+                </div>
+                <!-- #endregion -->
 
-                    <br>
+                <br>
 
-                    <!-- <button *ngIf="ngFrom.value" | async; else btnDisabled" type="submit"
+                <!-- #region Boton -->
+                <!-- <button *ngIf="ngFrom.value" | async; else btnDisabled" type="submit"
                       class="btn btn-lg btn-primary btn-block">Register</button> -->
 
-                      <button type="submit"
-                      class="btn btn-lg btn-primary btn-block">Crear</button>
+                <button type="submit" class="btn btn-lg btn-primary btn-block">Crear</button>
 
 
-                    <ng-template #btnDisabled>
-                      <button type="submit" disabled=true class="btn btn-lg btn-secondary btn-block">Register</button>
-                    </ng-template>
+                <ng-template #btnDisabled>
+                  <button type="submit" disabled=true class="btn btn-lg btn-secondary btn-block">Register</button>
+                </ng-template>
+                <!-- #endregion -->
 
+              </form>
+              <!-- #endregion -->
 
-                </form>
-              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
