--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,36 +1,1 @@
-<p>
-  home works!
-</p>
-<p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p><p>
-  home works!
-</p>
+<app-listado-mascotas></app-listado-mascotas>
